examples/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: a2w-codex-terraform
  namespace: a2w-codex-terraform
spec:
  type: ClusterIP
  selector:
    app: a2w-codex-terraform
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
