examples/k8s/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: a2w-codex-terraform
  namespace: a2w-codex-terraform
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: a2w-codex-terraform-gateway
      namespace: a2w-codex-terraform
  hostnames:
    - infra.example.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: a2w-codex-terraform
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
